# snipper

./: .gitignore  Cargo.toml  contracts.toml
src/: app_config.rs  events.rs  lib.rs  main.rs  token_tx.rs
src/abi/: uniswap_factory_base.rs  uniswap_factory_v2.rs  uniswap_pair.rs  uniswap_pool.rs  uniswap_quoter.rs  uniswap_router_base.rs  uniswap_router_v2.rs  uniswap_v3_factory.rs
src/data/: api_counts.rs  contracts.rs  gas.rs  nonce.rs  portfolio.rs  token_data.rs  token_state_update.rs  tokens.rs
src/mempool/: decode_add_liquidity.rs  detect_add_liquidity.rs
src/mocks/: mock_tx.rs
src/swap/: anvil_buy_sell.rs  anvil_simlator.rs  anvil_snapshots.rs  anvil_supporting_methods.rs  anvil_validation.rs  prepare_tx.rs  token_price.rs  tx_trait.rs
src/swap/anvil/: buy_sell.rs  simlator.rs  snapshots.rs  supporting_methods.rs  validation.rs
src/swap/flashbots/: buy_token.rs  flashbot_main.rs  prepare_tx.rs  submit_tx.rs
src/swap/mainnet/: buy_sell.rs  live_validation.rs  setup.rs
src/token_tx/: anvil.rs  mock_tx.rs  time_intervals.rs  tx.rs  validate.rs  volume_intervals.rs
src/utils/: logging.rs  tx.rs  type_conversion.rs  web_scrapper.rs
src/verify/: ai_structs.rs  ai_submission.rs  ai_token_analysis.rs  check_token_holders.rs  check_token_lock.rs  detect_honeypot.rs  etherscan_api.rs  openai_api.rs  thegraph_api.rs
src/verify/deepseek/: structs.rs
src/verify/openai/: ai_submission.rs  (+1 more)
tests/: ai.rs  api.rs  event_decode.rs  flashbots.rs  honeypot.rs  lock.rs  openai_api.rs  scrapper.rs  token_check.rs  token_lifecycle.rs  tx.rs  validation.rs
(+10 files in other folders)
