[package]
name = "snipper"
version = "0.1.0"
edition = "2021"

[dependencies]

ethers = { version = "2.0.14", features = ["ws", "eip712"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.37", features = ["full", "macros"] }
futures = "0.3.29"
bigdecimal = "0.3"
log = "0.4"
fern = "0.6.1"
chrono = "0.4.30"
colored = "2.0.0"
anyhow = "1.0.87"
once_cell = "1.8"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
